--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -8,10 +8,11 @@
 <body>
     <div id="header">
         <p style="text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;font-size:28px;">Random Chat</p>
+        <div id="userCount"></div>
     </div>
     <div id="messageBox">
         <p id="constMsg"></p>
-        <p id="typing" style="position: absolute;left:0;bottom: 0;font-weight:Bold">typing.....</p>
+        <p id="typing" style="position: absolute;left:45%;bottom: 0;font-weight:Bold">typing.....</p>
     </div>
     <div id="footer">
         <button type="button" id="b1">Stop</button>
